@startuml Entities
interface IRepository<T>{
    + GetOne(id: int): T
    + Post(item: T): void
    + Delete(id: int): void
}

class UserRepository{
    - users: List<User>
    + UserRepository(users: List<User>)
    + GetData(email: string, password: string): User
}

class ItemRepository {
    - items: List<Items>
    + ItemRepository(items: List<Items>)
    + GetAll(): List<Items>
}

class CategoriesRepository {
    - categories: List<Categories>
    + CategoriesRepository(categories: List<Categories>)
}

class OrderRepository {
    - orders: List<Order>
    + OrderRepository(orders: List<Order>)
}

hide empty fields
hide empty methods
left to right direction

User -left- Order
Items -left- Categories
CategoriesRepository -up-|> IRepository
UserRepository -up-|> IRepository
ItemRepository -up-|> IRepository
OrderRepository -up-|> IRepository

Categories -up- CategoriesRepository
User -up- UserRepository
Order -up- OrderRepository
Items -up- ItemRepository

@enduml